--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
  <p>[I enjoy doing, seeing, and experiencing new things. I enjoy playing video games, watching movies, and reading on occasion. I'm also interested in seeing new locations and learning about different cultures in order to have a better grasp of their way of life. I've opted to take this course because I've always been curious in how websites are created and how I can create one myself. I consider it a talent worth learning, and I'm excited to see how much more I can learn.</p>
  </main>
  <footer>
- <p>Copyright &copy; 2020 <Your Name>.</p>
+ <p>Copyright &copy; 2020 <Lejandru Richards>.</p>
  </footer>
 </body>
 </html>
